tests/invalid/trait/method_call_short_ufcs_local_struct_receiver_safety_gate.facet
struct Job {
  id: unrestricted isize
}

trait Runner {
  fn run(self: Self) -> unrestricted isize;
}

impl Runner for unrestricted Job {
  fn run(self: Self) -> unrestricted isize {
    1
  }
}

fn main() -> unrestricted isize {
  let x: unrestricted Job = Job { id = 1 };
  (Runner::run x)
}
